# aoc-2024

./: CMakeLists.txt  README.md  main.cpp
dec1/: dec1.cpp  dec1.h
dec2/: task34.cpp  task34.h  test-file
dec3/: corrupted-pc-data  dec3.cpp  dec3.h
dec4/: dec4.cpp  dec4.h
dec5/: dec5.cpp  dec5.h
dec6/: day6.cpp  day6.h
