cmake_minimum_required(VERSION 3.29)
project(aot_2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(aot_2024 main.cpp
        dec1/dec1.cpp
        dec2/task34.cpp
        dec3/dec3.cpp
        dec3/dec3.h
        dec4/dec4.cpp
        dec4/dec4.h
        dec5/dec5.cpp
        dec5/dec5.h
        dec6/day6.cpp
        dec6/day6.h)
